arr-stack/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-kube
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8989
  selector:
    app: sonarr-kube
